# xtrans-rs

./: Cargo.toml  LICENSE  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  justfile
.github/workflows/: ci.yml
crates/xt_app/: Cargo.toml  Dioxus.toml
crates/xt_app/assets/: main.css  tailwind.css
crates/xt_app/src/: actions.rs  app.rs  dioxus_app.rs  driver.rs  egui_app.rs  egui_theme.rs  history.rs  hotpatch.rs  lib.rs  main.rs  prefs.rs  state.rs
crates/xt_app/tests/: e2e_smoke.rs  e2e_workflows.rs
crates/xt_core/: Cargo.toml
crates/xt_core/src/: dictionary.rs  diff.rs  encoding.rs  heuristics.rs  hybrid.rs  import_export.rs  lib.rs  model.rs  search.rs  tm.rs  ui_state.rs  undo.rs  validation.rs  virtual_list.rs  workspace.rs
crates/xt_core/src/formats/: esp.rs  mod.rs  plugin.rs  plugin_binary.rs  strings.rs
crates/xt_core/tests/fixtures/plugin/: binary_simple.esm  simple.xtplugin
crates/xt_esp/: Cargo.toml
crates/xt_esp/src/: esp.rs  lib.rs  strings.rs
external_specs/xtranslator/: README.md  xtranslator-specification.md
spec/: architecture.md  data-model.md  esp-format.md  overview.md  process.md  requirements.md  scope.md  test-ledger.md  tests.md  ui-layout.md  xtranslator-gap.md
