[package]
name = "xt_app"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
eframe = "0.29.1"
egui = "0.29.1"
xt_core = { path = "../xt_core" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
